--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
 
 <footer>
     <p>D'Moritas @ 2022.Todos los derechos reservados.  
-    <a href="www.instagram.com" target="_blank">    <i class="fa-brands fa-instagram-square fa-2x1"></i></a>
-    <a href="www.facebook.com" target="_blank">    <i class="fa-brands fa-facebook fa-2x1"></i></a>   
+    <a href="https://www.instagram.com/" target="_blank">    <i class="fab fa-instagram fa-fw fa-2x fa-beat-fade" style="color: var(--example-color); --fa-animation-duration:2s;"></i></a>&nbsp;
+    <a href="https://www.facebook.com/" target="_blank">    <i class="fab fa-facebook fa-fw fa-2x fa-beat-fade" style="color: var(--example-color); --fa-animation-duration:2s;"></i></a>   
     </p>
 </footer>
 </body>
