--- a/producto.html
+++ b/producto.html
@@ -27,11 +27,11 @@
     <h1 class="animacion"><span style='--content: "PAGINA EN CONSTRUCCION";--start-color: rgb(37, 161, 151); --end-color: rgb(206, 160, 87); --delay:0s' >PAGINA EN CONSTRUCCION</span></h1>
     </div>
 
-<footer>
-    <p>D'Moritas @ 2022.Todos los derechos reservados.  
-        <a href="www.instagram.com" target="_blank">    <i class="fa-brands fa-instagram-square fa-2x1"></i></a>
-        <a href="www.facebook.com" target="_blank">    <i class="fa-brands fa-facebook fa-2x1"></i></a>   
+    <footer>
+        <p>D'Moritas @ 2022.Todos los derechos reservados.  
+        <a href="https://www.instagram.com/" target="_blank">    <i class="fab fa-instagram fa-fw fa-2x fa-beat-fade" style="color: var(--example-color); --fa-animation-duration:2s;"></i></a>&nbsp;
+        <a href="https://www.facebook.com/" target="_blank">    <i class="fab fa-facebook fa-fw fa-2x fa-beat-fade" style="color: var(--example-color); --fa-animation-duration:2s;"></i></a>   
         </p>
-</footer>
+    </footer>
 </body>
 </html>
